--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,4 +45,5 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/error_summary';
 @import 'components/focus';
 @import 'components/frontpage-cards';
+@import 'pages/profile-page';
 @import 'protocols/quiz1';
