--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -8,7 +8,7 @@
 {% prepare_course_menu %}
 
 <li>
-	<a href="#course-content" class="skip-link page-skip-link">
+	<a href="#course-content" class="skip-link page-skip-link hidden-xs">
 		{% trans "Skip course navigation" %}
 	</a>
 </li>
