--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,10 @@
                 <nav class="topbar navbar navbar-inverse navbar-static-top" aria-label="{% trans "Main" %}">
                     <div class="container-fluid">
                         <div class="navbar-header">
+                            <a class="navbar-brand" href="{% url 'home' %}">{% brand_name %}</a>
+                            <span class="navbar-brand visible-xs">
+                            {% if instance %} &nbsp; {{ course.name|parse_localization }}{% endif %}
+                            </span>
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false">
                                 <span class="sr-only">{% trans "Toggle navigation" %}</span>
                                 {% notification_count as n_count %}
@@ -89,10 +93,6 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand hidden-xs" href="{% url 'home' %}">{% brand_name %}</a>
-                            <span class="navbar-brand visible-xs">
-                            {% brand_name %}{% if instance %} &nbsp; {{ course.name|parse_localization }}{% endif %}
-                            </span>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-navbar-collapse">
                             <ul class="nav navbar-nav hidden-xs">
