Fix contrast of the current/active element shown in the  breadcrumb
Fixes #705

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -55,6 +55,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'layout/header';
 @import 'layout/footer';
 @import 'components/badge';
+@import 'components/breadcrumb';
 @import 'components/button';
 @import 'components/error_summary';
 @import 'components/focus';
