Add icon and a warning for screen readers to links that open in new tabs
Fixes #659

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -63,6 +63,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/focus';
 @import 'components/frontpage-cards';
 @import 'components/menu-notification';
+@import 'components/new-tab-links';
 @import 'components/overlay';
 @import 'pages/login';
 @import 'pages/profile-page';
