--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,3 +1,8 @@
+.navbar-dropdown {
+	@extend .navbar-nav;
+	display: inline-block;
+}
+
 .topbar {
 	background-color: $aplus-brand-primary;
 	border-bottom: none;
@@ -8,6 +13,7 @@
 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 
 	.navbar-brand,
+	.navbar-dropdown > a,
 	.navbar-nav > li > a,
 	.navbar-toggle,
 	.navbar-nav > .active > a,
@@ -19,10 +25,12 @@
 	}
 
 	a.navbar-brand:hover,
+	a.navbar-dropdown > a:hover,
 	.navbar-nav > li > a:hover,
 	.navbar-nav > .open > a,
 	.navbar-nav > .open > a:focus,
 	.navbar-nav > .open > a:hover {
+		@include focus-with-background-and-color;
 		background-color: #236aa7;
 		background-color: rgba(0, 0, 0, 0.1);
 	}
@@ -37,11 +45,12 @@
 			background-color: #fff;
 			@include focus-with-background-and-color;
 
-		.icon-bar {
-			background-color: #000000;
+			.icon-bar {
+				background-color: #000000;
+			}
 		}
 	}
-}
+
 	.navbar-header {
 		.visible-xs {
 			max-width: 250px;
@@ -64,6 +73,20 @@
 			}
 		}
 	}
+
+	.navbar-dropdown {
+		div.dropdown-backdrop {
+			display: none;
+		}
+		@media (max-width: 768px) {
+			ul.dropdown-menu {
+				& > li > a {
+					color: #fff !important;
+				}
+			}
+		}
+	}
+
 	ul.visible-xs {
 		margin: 0;
 
@@ -73,7 +96,7 @@
 			border-color: #236aa7;
 			border-color: rgba(0, 0, 0, 0.25);
 			a {
-				color: white !important;
+				color: white;
 				padding: 10px 15px !important;
 			}
 		}
@@ -100,4 +123,8 @@
 	}
 }
 
-
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
+	background-color: #fff;
+	@include focus-with-background-and-color;
+}
