--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -14,11 +14,10 @@
 </li>
 
 {% if instance.language|first == "|" %}
-</li>
-<li role="presentation" class="header visible-xs">
+<li class="header visible-xs">
 	<h4 id="course-menu-heading">{% trans "Language" %}</h4>
 </li>
-<li role="presentation" class="visible-xs dropdown">
+<li class="visible-xs dropdown">
 	<a href="#" class="dropdown-toggle" id="lang-dropdown-mobile" data-toggle="dropdown" role="button"
 		aria-haspopup="true" aria-expanded="false">
 		{% trans "Change language" %} <span class="caret"></span>
@@ -36,7 +35,7 @@
 		{% endfor %}
 	</ul>
 </li>
-<li role="presentation" class="header">
+<li class="header">
 	<div class="row">
 		<div class="col-sm-10">
 			<h4 id="course-menu-heading">{% trans "Course" %}</h4>
@@ -62,24 +61,24 @@
 		</div>
 	</div>
 {% else %}
-<li role="presentation" class="header">
+<li class="header">
 	<h4 id="course-menu-heading">{% trans "Course" %}</h4>
 </li>
 {% endif %}
 
-<li role="presentation" class="menu-home">
+<li class="menu-home">
 	<a href="{{ instance|url }}">
 		<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 		{{ course.code }}
 	</a>
 </li>
-<li role="presentation" class="menu-toc">
+<li class="menu-toc">
 	<a href="{{ instance|url:'toc' }}">
 		<span class="glyphicon glyphicon-book" aria-hidden="true"></span>
 		{% trans "Course materials" %}
 	</a>
 </li>
-<li role="presentation" class="menu-results">
+<li class="menu-results">
 	<a href="{{ instance|url:'results' }}">
 		<span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
 		{% trans "Exercise results" %}
@@ -88,7 +87,7 @@
 
 {% max_group_size as max_group %}
 {% if max_group > 1 %}
-<li role="presentation" class="menu-groups">
+<li class="menu-groups">
 	<a href="{{ instance|url:'groups' }}">
 		<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
 		{% trans "Form a group" %}
@@ -99,13 +98,13 @@
 
 {% for group in course_menu.student_link_groups %}
 {% if group.label %}
-<li role="presentation" class="header">
+<li class="header">
 	<h4>{{ group.label|parse_localization }}</h4>
 </li>
 {% endif %}
 {% for entry in group.items %}
 {% if entry.enabled %}
-<li role="presentation">
+<li>
 	<a href="{{ entry.url }}" {% if entry.blank %} target="_blank" {% endif %}>
 		{% if entry.icon_class %}
 		<span class="glyphicon glyphicon-{{ entry.icon_class }}" aria-hidden="true"></span>
@@ -118,11 +117,11 @@
 {% endfor %}
 
 {% if instance.tabs.exists %}
-<li role="presentation" class="header">
+<li class="header">
 	<h4>{% trans "Apps" %}</h4>
 </li>
 {% for tab in instance.tabs.all %}
-<li role="presentation" class="menu-tab{{ tab.id }}">
+<li class="menu-tab{{ tab.id }}">
 	<a href="{% url 'apps-tab' course_slug=course.url instance_slug=instance.url tab_id=tab.id %}">
 		<span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
 		{{ tab.label }}
@@ -132,18 +131,18 @@
 {% endif %}
 
 {% if is_course_staff %}
-<li role="presentation" class="header">
+<li class="header">
 	<h4>{% trans "Course staff" %}</h4>
 </li>
 
-<li role="presentation" class="menu-participants">
+<li class="menu-participants">
 	<a href="{{ instance|url:'participants' }}">
 		<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
 		{% trans "Participants" %}
 	</a>
 </li>
 
-<li role="presentation" class="menu-groups-edit">
+<li class="menu-groups-edit">
 	<a href="{{ instance|url:'groups-list' }}">
 		<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
 		{% trans "Groups" %}
@@ -151,7 +150,7 @@
 </li>
 
 {% if instance.coursediplomadesign %}
-<li role="presentation" class="menu-grades">
+<li class="menu-grades">
 	<a href="{% url 'diploma-list' instance.coursediplomadesign.id %}">
 		<span class="glyphicon glyphicon-certificate" aria-hidden="true"></span>
 		{% trans "Grades" %}
@@ -159,14 +158,14 @@
 </li>
 {% endif %}
 
-<li role="presentation" class="menu-all-results">
+<li class="menu-all-results">
 	<a href="{{ instance|url:'all-results' }}">
 		<span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
 		{% trans "All results" %}
 	</a>
 </li>
 
-<li role="presentation" class="menu-analytics">
+<li class="menu-analytics">
 	<a href="{{ instance|url:'analytics' }}">
 		<span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
 		{% trans "Visualizations" %}
@@ -174,13 +173,13 @@
 </li>
 
 {% if is_teacher %}
-<li role="presentation" class="menu-edit-news">
+<li class="menu-edit-news">
 	<a href="{{ instance|url:'news-list' }}">
 		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		{% trans "Edit news" %}
 	</a>
 </li>
-<li role="presentation" class="menu-edit-course">
+<li class="menu-edit-course">
 	<a href="{{ instance|url:'course-edit' }}">
 		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
 		{% trans "Edit course" %}
@@ -190,14 +189,14 @@
 
 {% for group in course_menu.staff_link_groups %}
 {% if group.label %}
-<li role="presentation" class="header">
+<li class="header">
 	<h4>{{ group.label|parse_localization }}</h4>
 </li>
 {% endif %}
 {% for entry in group.items %}
 {% if entry.enabled %}
 {% if is_teacher or entry|is_assistant_link %}
-<li role="presentation">
+<li>
 	<a href="{{ entry.url }}" {% if entry.blank %} target="_blank" {% endif %}>
 		{% if entry.icon_class %}
 		<span class="glyphicon glyphicon-{{ entry.icon_class }}" aria-hidden="true"></span>
