Add aria support to anchor tags that list student submissions
Fixes #597

--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -113,7 +113,7 @@
           <small>{{ entry.category|parse_localization }}</small>
         </td>
         <td class="submissions-dropdown dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button">
             <span class="badge">
               {% if entry.notified %}
               <span class="glyphicon glyphicon-comment{% if entry.unseen %} red{% endif %}"></span>
