--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -41,7 +41,7 @@
           </a>
       </li>
       <li class="dropdown menu-submission">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button"
               aria-haspopup="true" aria-expanded="false">
               {% trans "My submissions" %}
               ({{ summary.get_submission_count }}{% if exercise.max_submissions %}/{{ exercise|max_submissions:profile }}{% endif %})
