Modify the color property of dropdown items in the topbar for small devices
The color of the text in dropdown menus was changed from `#fff` to
`#dadada` to keep a visual separation between the menu items and the
items  that are part of the dropdown. The `!important` tag was removed
form the css properties that style the dropdown items.

Fixes #723

--- a/assets/sass/components/_menu-notification.scss
+++ b/assets/sass/components/_menu-notification.scss
@@ -1,14 +1,21 @@
-.menu-notification .glyphicon {
-	margin-right: 18px;
-}
-.menu-notification .badge {
-	position: absolute;
-	left: 28px;
-	top: 15px;
-	-webkit-animation: bounce 10s ease-in-out;
-	-moz-animation: bounce 10s ease-in-out;
-	-o-animation: bounce 10s ease-in-out;
-	animation: bounce 10s ease-in-out;
+.menu-notification {
+	.glyphicon {
+		margin-right: 18px;
+	}
+	.badge {
+		position: absolute;
+		left: 28px;
+		top: 15px;
+		-webkit-animation: bounce 10s ease-in-out;
+		-moz-animation: bounce 10s ease-in-out;
+		-o-animation: bounce 10s ease-in-out;
+		animation: bounce 10s ease-in-out;
+	}
+	@media (max-width: 768px) {
+		&.open > ul.dropdown-menu > li > a.page-modal {
+			color: #dadada;
+		}
+	}
 }
 @-webkit-keyframes bounce {
 	0%,
