--- a/assets/sass/components/_new-tab-links.scss
+++ b/assets/sass/components/_new-tab-links.scss
@@ -1,19 +1,8 @@
 // The following classes are used in assets/js/aplus.js. Therefore, you must
 // change the name of the classes in both files.
+@use '../components/icons';
 
-.icon::after {
-	display: inline-block;
-	font-style: normal;
-	font-variant: normal;
-	text-rendering: auto;
-	-webkit-font-smoothing: antialiased;
-}
-
-.external-link::after {
-	font-family: "Font Awesome 5 Free";
-	font-weight: 900;
-	content: "\f35d";
-	margin-left: 0.2em;
-	width: 1em;
-	height: 1em;
+i.icon.glyphicon.glyphicon-new-window {
+	@include icons.glyphicon;
+	margin-left: 5px;
 }
