Update the EU-U.S. Privacy Shield description in the privacy warnings
The European Court of Justice has declared that
the EU-U.S. Privacy Shield is invalid. The Privacy Shield setting
should not be used in the LinkService destination_region field
in the future. The destination region of current services should be
updated in production. This commit leaves the Privacy Shield
value to the model so that nothing breaks immediately in production.
This commit updates the descriptions in the user interface so that
they would not make false promises about Privacy Shield.

Fixes https://github.com/apluslms/a-plus/issues/680

--- a/external_services/templates/external_services/_privacy.html
+++ b/external_services/templates/external_services/_privacy.html
@@ -93,7 +93,7 @@
 	{% endif %}
 	{% blocktrans %}
 	This service is hosted outside of the European Economics Area and is thus not covered by <a href="https://ec.europa.eu/info/law/law-topic/data-protection/reform_en" rel="noopener nofollow" target="_blank" class="alert-link">the European Union's General Data Protection Regulation</a> (GDPR).
-	However, the service is certified under <a href="https://www.privacyshield.gov/Individuals-in-Europe" rel="noopener nofollow" target="_blank" class="alert-link">the EU-U.S. Privacy Shield</a>, which provides similar protection as GDPR.
+	The service used to be certified under <a href="https://www.privacyshield.gov/Individuals-in-Europe" rel="noopener nofollow" target="_blank" class="alert-link">the EU-U.S. Privacy Shield</a>, but the European Court of Justice has declared the EU-U.S. Privacy Shield invalid. We are investigating how this affects the use of the service.
 	{% endblocktrans %}
 {% else %}{# global #}
 	{% if service.sends_user_info %}
