Use the BRAND_NAME setting in UI strings instead of hardcoding A+
Some strings in the user interface had the name "A+" hardcoded in
them. This commit fixes them and uses the BRAND_NAME setting
instead of hardcoding a specific brand.

The titles in the login and user profile pages had this problem.

--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load bootstrap %}
 
-{% block title %}{% trans "Log in to A+" %} | {{ block.super }}{% endblock %}
+{% block title %}{% blocktrans %}Log in to {{ brand_name }}{% endblocktrans %} | {{ block.super }}{% endblock %}
 
 {% block scripts %}
 	{{ block.super }}
@@ -14,7 +14,7 @@
 {% block content %}
 
 	<div class="page-header">
-		<h1>{% trans "Log in to A+" %}</h1>
+		<h1>{% blocktrans %}Log in to {{ brand_name }}{% endblocktrans %}</h1>
 	</div>
 
 	<div id="login-box-row" class="row">
