--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -49,7 +49,7 @@
 </div>
 <div class="row">
 	<div class="col-sm-offset-2 col-sm-8 col-lg-4">
-		<h2>{% trans "A+ Preferences" %}</h2>
+		<h2>{% blocktrans %}{{ brand_name }} Preferences{% endblocktrans %}</h2>
 		<form action="{% url 'set-user-language' %}" method="post" class="form form-horizontal">{% csrf_token %}
 			<div class="form-group">
 				<label class="col-xs-12" for="language-profile">{% trans 'Language' %}</label>
