Add a support view
The support view contains quick links for teachers where they can find
information about A+

--- a/templates/base.html
+++ b/templates/base.html
@@ -219,6 +219,7 @@
 						{% block footercontent %}{% endblock %}
 						<li><a href="{% url 'privacy_notice' %}">{% trans "Privacy Notice" %}</a></li>
 						<li><a href="{% url 'accessibility_statement' %}">{% trans "Accessibility Statement" %}</a></li>
+						<li><a href="{% url 'support_channels' %}">{% trans "Support" %}</a></li>
 					</ul>
 				</div>
 			</div>
